--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,3 +1,7 @@
 ---
-- include: shell.yml
-- include: apps.yml
+#- include: shell.yml
+#- include: apps.yml
+- include: vim.yml
+- include: ruby.yml
+- include: tmux.yml
+- include: javascript.yml
