Uncomment shell and apps.

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-#- include: shell.yml
-#- include: apps.yml
+- include: shell.yml
+- include: apps.yml
 - include: vim.yml
 - include: ruby.yml
 - include: tmux.yml
