add .gemrc file and setup instructions under tasks/ruby.yml

--- a/roles/common/tasks/ruby.yml
+++ b/roles/common/tasks/ruby.yml
@@ -3,3 +3,8 @@
   copy:
     src: .short-stack/vimrc.d/ruby.bundle
     dest: ~/.short-stack/vimrc.d/ruby.bundle
+- name: copy .gemrc into ~
+  copy:
+    src: .gemrc
+    dest: ~/.gemrc
+
