Refactor code to use spf13. Move vimrc.d to ~/vimrc.d. Remove things that are already included in spf13. fixes #13 and fixes #12.

--- a/roles/common/tasks/ruby.yml
+++ b/roles/common/tasks/ruby.yml
@@ -1,10 +1,5 @@
----
-- name: copy ruby.bundle into vimrc.d
-  copy:
-    src: .short-stack/vimrc.d/ruby.bundle
-    dest: ~/.short-stack/vimrc.d/ruby.bundle
 - name: copy .gemrc into ~
   copy:
-    src: .gemrc
+    src: gemrc
     dest: ~/.gemrc
 
