--- a/roles/vim/handlers/main.yml
+++ b/roles/vim/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
-- name: vim PlugInstall
-  shell: vim +PlugInstall +qall
+- name: vim bundle install
+  shell: vim +BundleInstall! +BundleClean +qall
