move apps to globals variables.

--- a/roles/common/tasks/apps.yml
+++ b/roles/common/tasks/apps.yml
@@ -6,21 +6,4 @@
 - name: install commonly used applications using Homebrew Cask
   homebrew_cask: name={{ item }} state=present
   with_items:
-    - 1password
-    - dash
-    - divvy
-    - dropbox
-    - firefox
-    - google-chrome
-    - google-drive
-    - iterm2
-    - libreoffice
-    - linkinus
-    - sketch
-    - slack
-    - sourcetree
-    - spotify
-    - sublime-text
-    - vagrant
-    - virtualbox
-    - xmplify
+    - "{{ apps }}"
