--- a/group_vars/all/globals.yml
+++ b/group_vars/all/globals.yml
@@ -1,2 +1,23 @@
 ss_root: ~/.short-stack
 vimrc_d: ~/.vimrc.d
+
+# Homebrew cask apps
+apps:
+  - 1password
+  - dash
+  - divvy
+  - dropbox
+  - firefox
+  - google-chrome
+  - google-drive
+  - iterm2
+  - libreoffice
+  - linkinus
+  - sketch
+  - slack
+  - sourcetree
+  - spotify
+  - sublime-text
+  - vagrant
+  - virtualbox
+  - xmplify
