remove unused roles/vim/files/.vimrc, add vimrc.fork for our custom settings in spf-13 and add task to copy vimrc.fork to user dir.

--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -10,6 +10,8 @@
 
 - copy: src=vimrc.bundles.fork dest=~/.vimrc.bundles.fork
 
+- copy: src=vimrc.fork dest=~/.vimrc.fork
+
 - file: path={{ vimrc_d }} state=directory
 - copy: src=common.bundle dest={{ vimrc_d }}
   notify: vim bundle install
