add tmux.d dir, source .tmux.d/theme.conf and add a few vimrc.fork config settings for <Leader>i to indent a file and remove trailing white space on vim writes.

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -69,7 +69,7 @@ tmux_conf_battery_symbol=heart
 tmux_conf_battery_symbol_count=5
 
 # Tmuxline config
-source-file ~/.tmux/theme.conf
+if-shell "[ -f ~/.tmux.d/theme.conf ]" 'source-file ~/.tmux.d/theme.conf'
 
 # Source .tmux.conf.local if exists
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
