--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -13,3 +13,18 @@
 
 - copy: src=tmux.conf dest=~/.tmux.conf
 - file: path={{ tmux_d }} state=directory
+
+- name: add temporary folder to store fonts
+  file: path=~/.short-stack-temp state=directory
+
+- name: add patched powerline fonts
+  git: repo=https://github.com/powerline/fonts.git dest=~/.short-stack-temp/fonts
+
+- name: run powerline fonts installer
+  shell: ~/.short-stack-temp/fonts/install.sh
+  register: font_installer_echo
+
+- debug: msg="{{ font_installer_echo.stdout }}"
+
+- name: cleanup temporary folder
+  file: path=~/.short-stack-temp state=absent
