add monaco for powerline. check if tmux/theme.conf present and source it if it is. add config for vim-airline

--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -26,5 +26,8 @@
 
 - debug: msg="{{ font_installer_echo.stdout }}"
 
+- name: add monaco powerline patched font
+  copy: src=monaco_for_powerline.otf dest='~/Library/Fonts/Monaco for Powerline.otf'
+
 - name: cleanup temporary folder
-  file: path=/tmp state=absent
+  file: path=/tmp/fonts state=absent
