Add `~/.tmux.d/theme.conf` for some default powerline settings using tmuxline (no powerline, tmuxline does have no dependencies and integrates well with vim-airline provided by spf13)

--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -31,3 +31,6 @@
 
 - name: cleanup temporary folder
   file: path=/tmp/fonts state=absent
+
+- name: add tmux theme.conf
+  copy: src=theme.conf dest=~/.tmux.d/theme.conf
