--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 language: objective-c
 
 install:
-  - pip install ansible
+  - sudo pip install ansible
 
 script:
   - "bash install.sh --skip-short-stack"
