--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install:
 
 install:
   - sudo pip install ansible --quiet
+    # This usually times out: http://docs.travis-ci.com/user/build-timeouts/
+  - travis_wait brew install php55
 
 script:
   - bash install.sh --skip-short-stack
