--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 
 install:
   - sudo pip install ansible --quiet
+  - brew tap homebrew/php
     # This usually times out: http://docs.travis-ci.com/user/build-timeouts/
   - travis_wait brew install php55
 
