--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ install:
 
 script:
   - bash install.sh --skip-short-stack
+  - ansible-playbook ~/.short-stack/stack.yml -i ~/.short-stack/inventory --syntax-check
   #- ansible-playbook ~/.short-stack/stack.yml -i ~/.short-stack/inventory
