--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -14,5 +14,9 @@
 - copy: src=vimrc.fork dest=~/.vimrc.fork
 
 - file: path={{ vimrc_d }} state=directory
-- copy: src=common.bundle dest={{ vimrc_d }}
+- copy: src="{{ item }}.bundle" dest={{ vimrc_d }}
+  with_items:
+    - common
+    - javascript
+    - ruby
   notify: vim bundle install
