--- a/roles/drupal/tasks/main.yml
+++ b/roles/drupal/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - homebrew_tap: tap=homebrew/php state=present
-- homebrew: name=php56 state=latest
+- homebrew: name=php56 state=latest install_options=without-pear
 - homebrew: name=drush state=head
