--- a/roles/common/tasks/apps.yml
+++ b/roles/common/tasks/apps.yml
@@ -2,32 +2,13 @@
 - name: tap caskroom/cask so that we can install brew-cask
   homebrew_tap: tap=caskroom/cask state=present
 
-- name: install brew-cask
+- name: ensure brew-cask latest
   homebrew: name=brew-cask state=latest
 
-- name: Get app names from homebrew cask apps
-  shell: brew cask info {{ item }} | grep -o -E '(.*)\.app|(.*)\.pkg' | sed -e 's/^[ \t]*//'
-  with_items:
-    - "{{ apps }}"
-  register: app_info
-
-- name: register apps that need to be installed
-  shell: test -d '/Applications/{{ item.stdout }}' && echo "0" || echo "{{ item.item }}"
-  with_items:
-    - "{{ app_info.results }}"
-  register: apps_to_install
-
-- name: install applications using homebrew cask
-  homebrew_cask: name={{ item.item.item }} state=present
-  with_items:
-    - "{{ apps_to_install.results }}"
-  when: item.stdout != "0"
-
-- name: uninstall cask apps present in /Applications
-  homebrew_cask: name={{ item.item.item }} state=absent
-  with_items:
-    - "{{ apps_to_install.results }}"
-  when: item.stdout == "0"
+- name: ensure presence of applications from apps variable
+  homebrew_cask: name={{ item }} state=present
+  with_items: apps
+  when: apps is defined
 
 - name: ensure heroku toolbelt
   homebrew: name=heroku-toolbelt state=present
